SERVER-29160 bump timeout for migration operations